crates/reinhardt-urls/crates/routers-macros/tests/ui/fail/no_leading_slash.stderr
error: URL path must start with '/'
       Example: path!("/users/") instead of path!("users/")
 --> tests/ui/fail/no_leading_slash.rs:4:19
  |
4 |     let _ = path!("users/");
  |                   ^^^^^^^^
